// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendConfirmation XMR 1`] = `
<View>
  <Menu
    onBackdropPress={[Function]}
    onClose={[Function]}
    onOpen={[Function]}
    onSelect={[Function]}
    renderer={[Function]}
    rendererProps={Object {}}
  >
    <MenuTrigger
      customStyles={Object {}}
      disabled={false}
      style={
        Object {
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <FormattedText
        style={
          Object {
            "color": "#FFFFFF",
            "fontSize": 25,
            "fontWeight": "700",
            "paddingHorizontal": 8,
          }
        }
      >
        ⋮
      </FormattedText>
    </MenuTrigger>
    <MenuOptions
      customStyles={Object {}}
      optionsContainerStyle={
        Object {
          "width": 165,
        }
      }
    >
      <MenuOption
        customStyles={Object {}}
        disableTouchable={false}
        disabled={false}
        style={
          Object {
            "borderBottomColor": "#D9E3ED",
            "borderBottomWidth": 1,
            "justifyContent": "center",
          }
        }
        value="CHANGE_MINING_FEE"
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingVertical": 4,
            }
          }
        >
          <FormattedText
            style={
              Object {
                "color": "#4A5157",
                "fontSize": 18,
              }
            }
          >
            Change Mining Fee
          </FormattedText>
        </View>
      </MenuOption>
      <MenuOption
        customStyles={Object {}}
        disableTouchable={false}
        disabled={false}
        style={
          Object {
            "borderBottomColor": "#D9E3ED",
            "borderBottomWidth": 1,
            "justifyContent": "center",
          }
        }
        value="ADD_UNIQUE_IDENTIFIER"
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingVertical": 4,
            }
          }
        >
          <FormattedText
            style={
              Array [
                Object {
                  "color": "#4A5157",
                  "fontSize": 18,
                },
              ]
            }
          >
            Add Payment ID
          </FormattedText>
        </View>
      </MenuOption>
      <MenuOption
        customStyles={Object {}}
        disableTouchable={false}
        disabled={false}
        style={
          Object {
            "borderBottomColor": "#D9E3ED",
            "borderBottomWidth": 1,
            "justifyContent": "center",
          }
        }
        value="HELP"
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingVertical": 4,
            }
          }
        >
          <FormattedText
            style={
              Object {
                "color": "#4A5157",
                "fontSize": 18,
              }
            }
          >
            Help
          </FormattedText>
        </View>
      </MenuOption>
    </MenuOptions>
  </Menu>
</View>
`;

exports[`SendConfirmation XRP 1`] = `
<View>
  <Menu
    onBackdropPress={[Function]}
    onClose={[Function]}
    onOpen={[Function]}
    onSelect={[Function]}
    renderer={[Function]}
    rendererProps={Object {}}
  >
    <MenuTrigger
      customStyles={Object {}}
      disabled={false}
      style={
        Object {
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <FormattedText
        style={
          Object {
            "color": "#FFFFFF",
            "fontSize": 25,
            "fontWeight": "700",
            "paddingHorizontal": 8,
          }
        }
      >
        ⋮
      </FormattedText>
    </MenuTrigger>
    <MenuOptions
      customStyles={Object {}}
      optionsContainerStyle={
        Object {
          "width": 165,
        }
      }
    >
      <MenuOption
        customStyles={Object {}}
        disableTouchable={false}
        disabled={false}
        style={
          Object {
            "borderBottomColor": "#D9E3ED",
            "borderBottomWidth": 1,
            "justifyContent": "center",
          }
        }
        value="CHANGE_MINING_FEE"
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingVertical": 4,
            }
          }
        >
          <FormattedText
            style={
              Object {
                "color": "#4A5157",
                "fontSize": 18,
              }
            }
          >
            Change Mining Fee
          </FormattedText>
        </View>
      </MenuOption>
      <MenuOption
        customStyles={Object {}}
        disableTouchable={false}
        disabled={false}
        style={
          Object {
            "borderBottomColor": "#D9E3ED",
            "borderBottomWidth": 1,
            "justifyContent": "center",
          }
        }
        value="SEND_MAX"
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingVertical": 4,
            }
          }
        >
          <FormattedText
            style={
              Array [
                Object {
                  "color": "#4A5157",
                  "fontSize": 18,
                },
                Object {
                  "color": "#F1AA19",
                },
              ]
            }
          >
            Send Max Amount
          </FormattedText>
        </View>
      </MenuOption>
      <MenuOption
        customStyles={Object {}}
        disableTouchable={false}
        disabled={false}
        style={
          Object {
            "borderBottomColor": "#D9E3ED",
            "borderBottomWidth": 1,
            "justifyContent": "center",
          }
        }
        value="ADD_UNIQUE_IDENTIFIER"
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingVertical": 4,
            }
          }
        >
          <FormattedText
            style={
              Array [
                Object {
                  "color": "#4A5157",
                  "fontSize": 18,
                },
              ]
            }
          >
            Add Destination Tag
          </FormattedText>
        </View>
      </MenuOption>
      <MenuOption
        customStyles={Object {}}
        disableTouchable={false}
        disabled={false}
        style={
          Object {
            "borderBottomColor": "#D9E3ED",
            "borderBottomWidth": 1,
            "justifyContent": "center",
          }
        }
        value="HELP"
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingVertical": 4,
            }
          }
        >
          <FormattedText
            style={
              Object {
                "color": "#4A5157",
                "fontSize": 18,
              }
            }
          >
            Help
          </FormattedText>
        </View>
      </MenuOption>
    </MenuOptions>
  </Menu>
</View>
`;

exports[`SendConfirmation not editable 1`] = `
<View>
  <Menu
    onBackdropPress={[Function]}
    onClose={[Function]}
    onOpen={[Function]}
    onSelect={[Function]}
    renderer={[Function]}
    rendererProps={Object {}}
  >
    <MenuTrigger
      customStyles={Object {}}
      disabled={false}
      style={
        Object {
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <FormattedText
        style={
          Object {
            "color": "#FFFFFF",
            "fontSize": 25,
            "fontWeight": "700",
            "paddingHorizontal": 8,
          }
        }
      >
        ⋮
      </FormattedText>
    </MenuTrigger>
    <MenuOptions
      customStyles={Object {}}
      optionsContainerStyle={
        Object {
          "width": 165,
        }
      }
    >
      <MenuOption
        customStyles={Object {}}
        disableTouchable={false}
        disabled={false}
        style={
          Object {
            "borderBottomColor": "#D9E3ED",
            "borderBottomWidth": 1,
            "justifyContent": "center",
          }
        }
        value="CHANGE_MINING_FEE"
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingVertical": 4,
            }
          }
        >
          <FormattedText
            style={
              Object {
                "color": "#4A5157",
                "fontSize": 18,
              }
            }
          >
            Change Mining Fee
          </FormattedText>
        </View>
      </MenuOption>
      <MenuOption
        customStyles={Object {}}
        disableTouchable={false}
        disabled={false}
        style={
          Object {
            "borderBottomColor": "#D9E3ED",
            "borderBottomWidth": 1,
            "justifyContent": "center",
          }
        }
        value="HELP"
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingVertical": 4,
            }
          }
        >
          <FormattedText
            style={
              Object {
                "color": "#4A5157",
                "fontSize": 18,
              }
            }
          >
            Help
          </FormattedText>
        </View>
      </MenuOption>
    </MenuOptions>
  </Menu>
</View>
`;

exports[`SendConfirmation should render with standard props 1`] = `
<View>
  <Menu
    onBackdropPress={[Function]}
    onClose={[Function]}
    onOpen={[Function]}
    onSelect={[Function]}
    renderer={[Function]}
    rendererProps={Object {}}
  >
    <MenuTrigger
      customStyles={Object {}}
      disabled={false}
      style={
        Object {
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <FormattedText
        style={
          Object {
            "color": "#FFFFFF",
            "fontSize": 25,
            "fontWeight": "700",
            "paddingHorizontal": 8,
          }
        }
      >
        ⋮
      </FormattedText>
    </MenuTrigger>
    <MenuOptions
      customStyles={Object {}}
      optionsContainerStyle={
        Object {
          "width": 165,
        }
      }
    >
      <MenuOption
        customStyles={Object {}}
        disableTouchable={false}
        disabled={false}
        style={
          Object {
            "borderBottomColor": "#D9E3ED",
            "borderBottomWidth": 1,
            "justifyContent": "center",
          }
        }
        value="CHANGE_MINING_FEE"
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingVertical": 4,
            }
          }
        >
          <FormattedText
            style={
              Object {
                "color": "#4A5157",
                "fontSize": 18,
              }
            }
          >
            Change Mining Fee
          </FormattedText>
        </View>
      </MenuOption>
      <MenuOption
        customStyles={Object {}}
        disableTouchable={false}
        disabled={false}
        style={
          Object {
            "borderBottomColor": "#D9E3ED",
            "borderBottomWidth": 1,
            "justifyContent": "center",
          }
        }
        value="SEND_MAX"
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingVertical": 4,
            }
          }
        >
          <FormattedText
            style={
              Array [
                Object {
                  "color": "#4A5157",
                  "fontSize": 18,
                },
                Object {
                  "color": "#F1AA19",
                },
              ]
            }
          >
            Send Max Amount
          </FormattedText>
        </View>
      </MenuOption>
      <MenuOption
        customStyles={Object {}}
        disableTouchable={false}
        disabled={false}
        style={
          Object {
            "borderBottomColor": "#D9E3ED",
            "borderBottomWidth": 1,
            "justifyContent": "center",
          }
        }
        value="HELP"
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingVertical": 4,
            }
          }
        >
          <FormattedText
            style={
              Object {
                "color": "#4A5157",
                "fontSize": 18,
              }
            }
          >
            Help
          </FormattedText>
        </View>
      </MenuOption>
    </MenuOptions>
  </Menu>
</View>
`;
